[project]
name = "only-json"
version = "0.1.0"
description = "An API that fetches YAML and returns JSON."
authors = [
    {name = "TomExMachina", email = "tom@firesight.ai"},
]
dependencies = [
    "fastapi>=0.104.1",
    "aiodns>=3.1.1",
    "Brotli>=1.1.0",
    "faust-cchardet>=2.1.19",
    "aiohttp>=3.8.6",
    "validators>=0.22.0",
    "pyyaml>=6.0.1",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

